[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,27 @@
 <html>
+    
+     <head>
+           <title>Article One | Ankur Pathak</title>
+     </head>
+     <body>
+         <div>
+             <a href="/">Home</a>
+         </div>
+         <hr/>
+         <h3>
+             Article One
+         </h3>
+         <div> 
+               Sep 6 2017
+         </div>
+         <div>
+             <p> This is the content for my first article which is completely would be a dummy article and I don't want to go in a deep explanation. This will increase the readability of the code and this is the one of the most appealing content of the web page.
+             </p>
+             <p> This is the content for my first article which is completely would be a dummy article and I don't want to go in a deep explanation. This will increase the readability of the code and this is the one of the most appealing content of the web page.
+             </p>
+             <p> This is the content for my first article which is completely would be a dummy article and I don't want to go in a deep explanation. This will increase the readability of the code and this is the one of the most appealing content of the web page.
+             </p>
+         </div>
+     </body>
+    
 </html>
