--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -3,6 +3,7 @@
     
      <head>
            <title>Article Three | Ankur Pathak</title>
+           <meta name= "viewport" content= "width=device-width initial-scale=1"/>
      </head>
      <body>
          <div>
