--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,8 +4,18 @@
      <head>
            <title>Article One | Ankur Pathak</title>
            <meta name= "viewport" content= "width=device-width initial-scale=1"/>
+           <style>
+           .container
+           {
+               max-width:800px;
+               margin:0 auto;
+               color: grey;
+               font-family:sans-serif;
+           }
+           </style>
      </head>
      <body>
+         <div class="container">
          <div>
              <a href="/">Home</a>
          </div>
@@ -15,15 +25,16 @@
          </h3>
          <div> 
                Sep 6 2017
-         </div>
-         <div>
-             <p> This is the content for my first article which is completely would be a dummy article and I don't want to go in a deep explanation. This will increase the readability of the code and this is the one of the most appealing content of the web page.
-             </p>
-             <p> This is the content for my first article which is completely would be a dummy article and I don't want to go in a deep explanation. This will increase the readability of the code and this is the one of the most appealing content of the web page.
-             </p>
-             <p> This is the content for my first article which is completely would be a dummy article and I don't want to go in a deep explanation. This will increase the readability of the code and this is the one of the most appealing content of the web page.
-             </p>
-         </div>
+             </div>
+             <div>
+                 <p> This is the content for my first article which is completely would be a dummy article and I don't want to go in a deep explanation. This will increase the readability of the code and this is the one of the most appealing content of the web page.
+                 </p>
+                 <p> This is the content for my first article which is completely would be a dummy article and I don't want to go in a deep explanation. This will increase the readability of the code and this is the one of the most appealing content of the web page.
+                 </p>
+                 <p> This is the content for my first article which is completely would be a dummy article and I don't want to go in a deep explanation. This will increase the readability of the code and this is the one of the most appealing content of the web page.
+                 </p>
+             </div>
+            </div>
      </body>
     
 </html>
