--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,10 +7,13 @@
            <style>
            .container
            {
-               max-width:800px;
-               margin:0 auto;
-               color: grey;
-               font-family:sans-serif;
+               max-width: 800px;
+    margin: 0 auto;
+    color: #845e5e;
+    font-family: sans-serif;
+    padding: 60px;
+    padding-left: 20px;
+    padding-right: 30px;
            }
            </style>
      </head>
