--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,8 +4,21 @@
      <head>
            <title>Article Two | Ankur Pathak</title>
            <meta name= "viewport" content= "width=device-width initial-scale=1"/>
+           <style>
+           .container
+           {
+               max-width: 800px;
+                margin: 0 auto;
+                color: #845e5e;
+                font-family: sans-serif;
+                padding: 60px;
+                padding-left: 20px;
+                padding-right: 30px;
+           }
+           </style>
      </head>
      <body>
+         <div class="container">
          <div>
              <a href="/">Home</a>
          </div>
@@ -23,6 +36,7 @@
              </p>
              <p> This is the content for my Second article which is completely would be a dummy article and I don't want to go in a deep explanation. This will increase the readability of the code and this is the one of the most appealing content of the web page.
              </p>
+         </div>
          </div>
      </body>
     
