--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -17,7 +17,7 @@
            }
            </style>
      </head>
-     <body>
+     <body><div class ="container">
          <div>
              <a href="/">Home</a>
          </div>
@@ -35,6 +35,7 @@
              </p>
              <p> This is the content for my Three article which is completely would be a dummy article and I don't want to go in a deep explanation. This will increase the readability of the code and this is the one of the most appealing content of the web page.
              </p>
+         </div>
          </div>
      </body>
     
