--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,18 +4,7 @@
      <head>
            <title>Article One | Ankur Pathak</title>
            <meta name= "viewport" content= "width=device-width initial-scale=1"/>
-           <style>
-           .container
-           {
-               max-width: 800px;
-    margin: 0 auto;
-    color: #845e5e;
-    font-family: sans-serif;
-    padding: 60px;
-    padding-left: 20px;
-    padding-right: 30px;
-           }
-           </style>
+         <link href="/ui/style.css" rel="stylesheet"/>
      </head>
      <body>
          <div class="container">
