[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id='madi' src="/ui/madi.png" class="img-medium"/>
+            <img id='madi' src="https://dyn.web.whatsapp.com/pp?t=l&u=919990714119%40c.us&i=1494324418&ref=1%40mac0mo0mYpfzNkzC1dIBwKOauHO6YWzBFNJmoSUgS9cYDDGChI47eqeY&tok=1%40XbIGFPtfoUGBxOt08pL2L9zlqaXHtr%2B7Buy1ZtbAdaMZOpdCkuYxLtXtp42sDUwl5vmlJRVzZHPjVA%3D%3D" class="img-medium"/>
         </div>
         <br>
         <div id = 'main-text'class="center text-big bold">
