--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@
         <h3>lOGIN TO UNLOCK AWESOME FEATURES</h3>
         <div><input type="text" id = "username" placeholder="UserName"/>
         <input type="password" id = "username" placeholder="P@ssword"/>
-        <input type = "submit" id ="submit_btn" >
+        <input type = "submit" id ="submit_btn" />
         </div><hr/>
         
        <div class="footer"></div>
