[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,7 @@
         <div>I work at Broadsoft</div><hr/>    
         <h3>lOGIN TO UNLOCK AWESOME FEATURES</h3>
         <div><input type="text" id = "username" placeholder="UserName"/>
-        <input type="password" id = "username" placeholder="P@ssword"/>
+        <input type="password" id = "password" placeholder="P@ssword"/>
         <input type = "submit" id ="submit_btn" />
         </div><hr/>
         
